unpackaged/main/default/objects/ET_Vehicle_Fuel_Master__c/ET_Vehicle_Fuel_Master__c.object-meta.xml
<CustomObject>
    <label>Vehicle Fuel Master</label>
    <nameField>
        <displayFormat>VFM-{0000}</displayFormat>
        <label>Vehicle Fuel Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles Fuel Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>