unpackaged/main/default/objects/ET_Vehicle_Fuel_Master__c/fields/ET_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Petrol</fullName>
            </value>
            <value>
                <fullName>CNG/Diesel</fullName>
            </value>
            <value>
                <fullName>CNG/Petrol</fullName>
            </value>
            <value>
                <fullName>AdBlue/Diesel</fullName>
            </value>
            <value>
                <fullName>AdBlue/Petrol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>