unpackaged/main/default/objects/ET_Vehicle_Fuel_Master__c/fields/ET_Liter_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Liter_Price__c</fullName>
    <label>Liter Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>