unpackaged/main/default/objects/ET_Vehicle_Fuel_Master__c/fields/ET_Motor_Usage__c.field-meta.xml
<CustomField>
    <fullName>ET_Motor_Usage__c</fullName>
    <label>Motor Usage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>