unpackaged/main/default/objects/ET_Vehicle_Fuel_Master__c/fields/ET_Unit__c.field-meta.xml
<CustomField>
    <fullName>ET_Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Liter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>