unpackaged/main/default/objects/ET_Vehicle_Fuel_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Fuel_Type__c</columns>
    <columns>ET_Actual_Liter_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>